mvc_macro_lib/tests/should_fail/macro_fail_on_empty_test.rs

mvc_macro_lib::rusthtml_view_macro! {
    @name MockView
    <p>@"Hello, world!"</p>
}